Fixing overflow modal scrollbar issue

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -48,7 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
     z-index: $mc-zindex-modal;
   }
